# scrapely

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
scrapely/: version.py
tests/: __init__.py  test_extraction.py
