[build-system]
requires = ["setuptools >= 61.0.0", "setuptools-scm[toml] >= 6.2", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "sd-scrapely"
dynamic = ["version"]
description = "A pure-python HTML screen-scraping library"
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
    {name = "Scrapy project", email = "info@scrapy.org"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
    "numpy",
    "w3lib",
]

[project.urls]
Homepage = "https://github.com/SpazioDati/scrapely"
Repository = "https://github.com/SpazioDati/scrapely"

[tool.setuptools_scm]
write_to = "scrapely/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
